--- a/index.html
+++ b/index.html
@@ -44,10 +44,71 @@
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </div>
 
+  <!-- About -->
+<div>
+    <div class="row">
+        <div class="col-4">About Me</div>
+        <div class="col-8">
+            <h5>My name is Popoola Mary, Chief Coach of The Demo Coach. I hail from Nigeria and travel around the world speaking about and coaching people on how to prepare for high-stakes speaking opportunities and how to harness speaking anxiety. I do this through keynotes, experiential interactive workshops, live streaming, and 1:1 sessions, both in-person and online.</h5>
+            <br>
+            <h5>I am a highly motivated and progress-focused creative with an excellent background. With a history of initiative and dependability, I have devised strategic initiatives which I believe will prove valuable.
+              Throughout the course of my career, I have perfected my business administration and talent management abilities. I am a capable and consistent analytical person skilled at prioritizing and managing projects with proficiency. In my previous role, I contributed innovation, motivation, and benefits explanation toward team efforts and business improvements. I am progressive minded and in tune with new developments in my field. I have proven to be effective and collaborative with strong team-building talents. I enjoy collective brainstorming sessions which all me to coordinate activities to achieve a common goal.
+              </h5>
+        </div>
+      </div>
+</div>
 
+<!-- work -->
+<div>
+    <div class="row">
+        <div class="col-4">Work</div>
+        <div class="col-8">
+                  <div class="container">
+                      <div class="row">
+                          <div class="col-6">
+                            <img src="images/02-portfolio-1.jpg" alt="">
+                          </div>
+                          <div class="col-6">
+                            <img src="images/02-portfolio-2.jpg" alt="">
+                          </div>
+                      </div>
+                      <div class="row">
+                          <div class="col-6">
+                            <img src="images/02-portfolio-3.jpg" alt="">
+                          </div>
+                          <div class="col-6">
+                            <img src="images/02-run-buddy.jpg" alt="">
+                          </div>
+                      </div>
+                  </div>
+              
+              
+        </div>
+      </div>
+</div>
 
-
-
+<!-- Contact -->
+<div>
+    <div class="row">
+        <div class="col-4">Contact Me</div>
+        <div class="col-8">
+            <ul>
+                <li>
+                    <a href="#website">www.stearatefig.com</a>
+                </li>
+                <li>
+                    <a href="#Email">popoolamarimar@gmail.com</a>
+                </li>
+                <li>
+                    <a href="#Github">Github</a>
+                </li>
+                <li>
+                  <a href="#Twitter">Twitter</a>
+              </li>
+            </ul>
+        </div>
+      </div>
+</div>
 
 </body>
 </html>
