--- a/index.html
+++ b/index.html
@@ -5,31 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap-Portfolio</title>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Stearate Fig</a>
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand text-center" href="#"><strong>Stearate Fig</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#about"><u>About Me</u></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#work"><u>Work</u></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Link</a>
-              </li>
+            <a class="nav-link" href="#contact"><u>Contact</u></a>
+            </li>
+            <li class="nav-item active">
+            <a class="nav-link" href="#resume"><u>Resume</u></a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -37,60 +39,90 @@
 
 <!-- Jumbotron -->
 <div class="jumbotron">
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <div class="left">
+        <div class="subtitle">
+          <h2>A Parallel Universe!</h2>
+        </div>
+      </div>
   </div>
 
   <!-- About -->
 <div>
     <div class="row">
-        <div class="col-4">About Me</div>
+        <div class="col-4 text-right">About Me
+            <div class="vl"></div>
+        </div>
         <div class="col-8">
-            <h5>My name is Popoola Mary, Chief Coach of The Demo Coach. I hail from Nigeria and travel around the world speaking about and coaching people on how to prepare for high-stakes speaking opportunities and how to harness speaking anxiety. I do this through keynotes, experiential interactive workshops, live streaming, and 1:1 sessions, both in-person and online.</h5>
-            <br>
-            <h5>I am a highly motivated and progress-focused creative with an excellent background. With a history of initiative and dependability, I have devised strategic initiatives which I believe will prove valuable.
+            <p>My name is Popoola Mary, Chief Coach of The Demo Coach. I hail from Nigeria and travel around the world speaking about and coaching people on how to prepare for high-stakes speaking opportunities and how to harness speaking anxiety. I do this through keynotes, experiential interactive workshops, live streaming, and 1:1 sessions, both in-person and online.</p>
+            <p>I am a highly motivated and progress-focused creative with an excellent background. With a history of initiative and dependability, I have devised strategic initiatives which I believe will prove valuable.
               Throughout the course of my career, I have perfected my business administration and talent management abilities. I am a capable and consistent analytical person skilled at prioritizing and managing projects with proficiency. In my previous role, I contributed innovation, motivation, and benefits explanation toward team efforts and business improvements. I am progressive minded and in tune with new developments in my field. I have proven to be effective and collaborative with strong team-building talents. I enjoy collective brainstorming sessions which all me to coordinate activities to achieve a common goal.
-              </h5>
+            </p>
         </div>
       </div>
 </div>
 
-<!-- work -->
-<div>
-    <div class="row">
-        <div class="col-4">Work</div>
-        <div class="col-8">
-                  <div class="container">
-                      <div class="row">
-                          <div class="col-6">
-                            <img src="images/02-portfolio-1.jpg" alt="">
-                          </div>
-                          <div class="col-6">
-                            <img src="images/02-portfolio-2.jpg" alt="">
-                          </div>
-                      </div>
-                      <div class="row">
-                          <div class="col-6">
-                            <img src="images/02-portfolio-3.jpg" alt="">
-                          </div>
-                          <div class="col-6">
-                            <img src="images/02-run-buddy.jpg" alt="">
-                          </div>
-                      </div>
-                  </div>
-              
-              
+
+
+<!-- Work -->
+<div class="row">
+    <div class="col-4 text-right">Work
+        <div class="vll"></div>
+    </div>
+    <div class="col-8">
+        <div class="row">
+            <div class="card text-white">
+                <img src="images/02-portfolio-4.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay">
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
         </div>
-      </div>
+        <div class="row">
+            <div class="col-6">
+                <div class="card text-white">
+                    <img src="images/02-portfolio-1.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-6">
+                <div class="card text-white">
+                    <img src="images/02-portfolio-2.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
+                <div class="card text-white">
+                    <img src="images/02-portfolio-3.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-6">
+                <div class="card text-white">
+                    <img src="images/02-run-buddy.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+          </div>
+    </div>
 </div>
+
 
 <!-- Contact -->
 <div>
     <div class="row">
-        <div class="col-4">Contact Me</div>
+        <div class="col-4 text-right">Contact Me
+            <div class="vl"></div>
+        </div>
         <div class="col-8">
             <ul>
                 <li>
@@ -109,6 +141,8 @@
         </div>
       </div>
 </div>
+
+
 
 </body>
 </html>
