--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
         <div class="vll"></div>
     </div>
     <div class="col-8">
-        <div class="row">
+        <div class="p-4 h-25 mb-5">
             <div class="card text-white">
-                <img src="images/02-portfolio-4.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay">
+                <img src="images/02-portfolio-4.jpg" class="card-img big" alt="...">
+                <div class="card-img-overlay h-25">
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
         </div>
-        <div class="row">
+        <div class="row p-4">
             <div class="col-6">
                 <div class="card text-white">
-                    <img src="images/02-portfolio-1.jpg" class="card-img" alt="...">
+                    <img src="images/02-portfolio-1.jpg" class="card-img big" alt="...">
                     <div class="card-img-overlay">
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
@@ -88,17 +88,17 @@
             </div>
             <div class="col-6">
                 <div class="card text-white">
-                    <img src="images/02-portfolio-2.jpg" class="card-img" alt="...">
+                    <img src="images/02-portfolio-2.jpg" class="card-img big" alt="...">
                     <div class="card-img-overlay">
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                   </div>
             </div>
           </div>
-          <div class="row">
+          <div class="row p-4">
             <div class="col-6">
                 <div class="card text-white">
-                    <img src="images/02-portfolio-3.jpg" class="card-img" alt="...">
+                    <img src="images/02-portfolio-3.jpg" class="card-img big" alt="...">
                     <div class="card-img-overlay">
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
@@ -106,7 +106,7 @@
             </div>
             <div class="col-6">
                 <div class="card text-white">
-                    <img src="images/02-run-buddy.jpg" class="card-img" alt="...">
+                    <img src="images/02-run-buddy.jpg" class="card-img big" alt="...">
                     <div class="card-img-overlay">
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
