--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
   <!-- About -->
 <div>
     <div class="row">
-        <div class="col-4 text-right">About Me
-            <div class="vl"></div>
+        <div class="col-4">
+            <img src="images/IMG-2927.JPG" alt="My Image" class="ml-5 h-50 w-50">
+            <div class="vl1"></div>
         </div>
-        <div class="col-8">
-            <p>My name is Popoola Mary, Chief Coach of The Demo Coach. I hail from Nigeria and travel around the world speaking about and coaching people on how to prepare for high-stakes speaking opportunities and how to harness speaking anxiety. I do this through keynotes, experiential interactive workshops, live streaming, and 1:1 sessions, both in-person and online.</p>
-            <p>I am a highly motivated and progress-focused creative with an excellent background. With a history of initiative and dependability, I have devised strategic initiatives which I believe will prove valuable.
+        <div class="col-8 pl-5 pr-5">
+            <h6 style="font-size: 1.05vw;">My name is Popoola Mary, Chief Coach of The Demo Coach. I hail from Nigeria and travel around the world speaking about and coaching people on how to prepare for high-stakes speaking opportunities and how to harness speaking anxiety. I do this through keynotes, experiential interactive workshops, live streaming, and 1:1 sessions, both in-person and online.</h6>
+            <h6 style="font-size: 1.05vw;">I am a highly motivated and progress-focused creative with an excellent background. With a history of initiative and dependability, I have devised strategic initiatives which I believe will prove valuable.
               Throughout the course of my career, I have perfected my business administration and talent management abilities. I am a capable and consistent analytical person skilled at prioritizing and managing projects with proficiency. In my previous role, I contributed innovation, motivation, and benefits explanation toward team efforts and business improvements. I am progressive minded and in tune with new developments in my field. I have proven to be effective and collaborative with strong team-building talents. I enjoy collective brainstorming sessions which all me to coordinate activities to achieve a common goal.
-            </p>
+            </h6>
         </div>
       </div>
 </div>
@@ -73,7 +74,11 @@
             <div class="card text-white">
                 <img src="images/02-portfolio-4.jpg" class="card-img big" alt="...">
                 <div class="card-img-overlay h-25">
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="grid-text">
+                        <h3>Surf Report</h3>
+              <p>MERN Stack</p>
+              <a href="#surfreportapplication"></a>
+                      </div>
                 </div>
               </div>
         </div>
@@ -82,7 +87,11 @@
                 <div class="card text-white">
                     <img src="images/02-portfolio-1.jpg" class="card-img big" alt="...">
                     <div class="card-img-overlay">
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                         <div class="grid-text">
+                        <h3>Led Wall</h3>
+                        <p>Node/IoT</p>
+                        <a href="#ledwallapplication"></a>
+                      </div>
                     </div>
                   </div>
             </div>
@@ -90,7 +99,11 @@
                 <div class="card text-white">
                     <img src="images/02-portfolio-2.jpg" class="card-img big" alt="...">
                     <div class="card-img-overlay">
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                         <div class="grid-text">
+                            <h3>Calculator</h3>
+                            <p>React/JavaScript/CSS</p>
+                            <a href="#calculatorapplication"></a>
+                      </div>
                     </div>
                   </div>
             </div>
@@ -100,7 +113,11 @@
                 <div class="card text-white">
                     <img src="images/02-portfolio-3.jpg" class="card-img big" alt="...">
                     <div class="card-img-overlay">
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                         <div class="grid-text">
+                            <h3>Pastel Puzzles</h3>
+                            <p>MERN Stack</p>
+                            <a href="#pastelpuzzlesapplication"></a>
+                      </div>
                     </div>
                   </div>
             </div>
@@ -108,7 +125,11 @@
                 <div class="card text-white">
                     <img src="images/02-run-buddy.jpg" class="card-img big" alt="...">
                     <div class="card-img-overlay">
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                         <div class="grid-text">
+                            <h3>Run Buddy</h3>
+                            <p>HTML/CSS</p>
+                            <a href="#runbuddyapplication"></a>
+                      </div>
                     </div>
                   </div>
             </div>
@@ -123,18 +144,18 @@
         <div class="col-4 text-right">Contact Me
             <div class="vl"></div>
         </div>
-        <div class="col-8">
-            <ul>
-                <li>
+        <div class="col-8 pt-5 mt-5" id="contact">
+            <ul class="list-inline text-center">
+                <li class="list-inline-item">
                     <a href="#website">www.stearatefig.com</a>
                 </li>
-                <li>
+                <li class="list-inline-item">
                     <a href="#Email">popoolamarimar@gmail.com</a>
                 </li>
-                <li>
+                <li class="list-inline-item">
                     <a href="#Github">Github</a>
                 </li>
-                <li>
+                <li class="list-inline-item">
                   <a href="#Twitter">Twitter</a>
               </li>
             </ul>
