--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
 <div>
     <div class="row">
         <div class="col-4">
-            <img src="images/IMG-2927.JPG" alt="My Image" class="ml-5 h-50 w-50">
-            <div class="vl1"></div>
+            <div class="ml-5">
+                <img src="images/IMG-2927.JPG" alt="My Image" class="ml-5 h-50 w-50">
+                <h5 class="ml-5 pl-2 font-weight-bold" style="font-size: 1.5vw;">POPOOLA MARY</h5>
+            </div>
         </div>
         <div class="col-8 pl-5 pr-5">
-            <h6 style="font-size: 1.05vw;">My name is Popoola Mary, Chief Coach of The Demo Coach. I hail from Nigeria and travel around the world speaking about and coaching people on how to prepare for high-stakes speaking opportunities and how to harness speaking anxiety. I do this through keynotes, experiential interactive workshops, live streaming, and 1:1 sessions, both in-person and online.</h6>
-            <h6 style="font-size: 1.05vw;">I am a highly motivated and progress-focused creative with an excellent background. With a history of initiative and dependability, I have devised strategic initiatives which I believe will prove valuable.
+            <h6 style="font-size: 1.25vw;">My name is Popoola Mary, Chief Coach of The Demo Coach. I hail from Nigeria and travel around the world speaking about and coaching people on how to prepare for high-stakes speaking opportunities and how to harness speaking anxiety. I do this through keynotes, experiential interactive workshops, live streaming, and 1:1 sessions, both in-person and online.</h6>
+            <h6 style="font-size: 1.25vw;">I am a highly motivated and progress-focused creative with an excellent background. With a history of initiative and dependability, I have devised strategic initiatives which I believe will prove valuable.
               Throughout the course of my career, I have perfected my business administration and talent management abilities. I am a capable and consistent analytical person skilled at prioritizing and managing projects with proficiency. In my previous role, I contributed innovation, motivation, and benefits explanation toward team efforts and business improvements. I am progressive minded and in tune with new developments in my field. I have proven to be effective and collaborative with strong team-building talents. I enjoy collective brainstorming sessions which all me to coordinate activities to achieve a common goal.
             </h6>
         </div>
@@ -66,7 +68,7 @@
 
 <!-- Work -->
 <div class="row">
-    <div class="col-4 text-right">Work
+    <div class="col-4 text-center">Work
         <div class="vll"></div>
     </div>
     <div class="col-8">
@@ -74,7 +76,7 @@
             <div class="card text-white">
                 <img src="images/02-portfolio-4.jpg" class="card-img big" alt="...">
                 <div class="card-img-overlay h-25">
-                    <div class="grid-text">
+                    <div class="grid-text w-25">
                         <h3>Surf Report</h3>
               <p>MERN Stack</p>
               <a href="#surfreportapplication"></a>
@@ -87,7 +89,7 @@
                 <div class="card text-white">
                     <img src="images/02-portfolio-1.jpg" class="card-img big" alt="...">
                     <div class="card-img-overlay">
-                         <div class="grid-text">
+                         <div class="grid-text w-50">
                         <h3>Led Wall</h3>
                         <p>Node/IoT</p>
                         <a href="#ledwallapplication"></a>
@@ -99,7 +101,7 @@
                 <div class="card text-white">
                     <img src="images/02-portfolio-2.jpg" class="card-img big" alt="...">
                     <div class="card-img-overlay">
-                         <div class="grid-text">
+                         <div class="grid-text w-50">
                             <h3>Calculator</h3>
                             <p>React/JavaScript/CSS</p>
                             <a href="#calculatorapplication"></a>
@@ -113,7 +115,7 @@
                 <div class="card text-white">
                     <img src="images/02-portfolio-3.jpg" class="card-img big" alt="...">
                     <div class="card-img-overlay">
-                         <div class="grid-text">
+                         <div class="grid-text w-50">
                             <h3>Pastel Puzzles</h3>
                             <p>MERN Stack</p>
                             <a href="#pastelpuzzlesapplication"></a>
@@ -125,7 +127,7 @@
                 <div class="card text-white">
                     <img src="images/02-run-buddy.jpg" class="card-img big" alt="...">
                     <div class="card-img-overlay">
-                         <div class="grid-text">
+                         <div class="grid-text w-50">
                             <h3>Run Buddy</h3>
                             <p>HTML/CSS</p>
                             <a href="#runbuddyapplication"></a>
@@ -141,7 +143,7 @@
 <!-- Contact -->
 <div>
     <div class="row">
-        <div class="col-4 text-right">Contact Me
+        <div class="col-4 text-center">Contact Me
             <div class="vl"></div>
         </div>
         <div class="col-8 pt-5 mt-5" id="contact">
