--- a/index.html
+++ b/index.html
@@ -105,18 +105,18 @@
     
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <div class="card">
-                        <img src="images/3_card.png" class="card-img-top" alt="Model-1">
+                        <img src="images/3_card.png" class="card-img-top" alt="Forms">
                         <div class="card-body">
-                            <a href="Model-1/starter/modelindex.html" class="btn">Model-1</a>
+                            <a href="4-forms/index.html" class="btn">Forms</a>
                         </div>
                       </div>
                     </div>
     
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <div class="card">
-                        <img src="images/6_card.png" class="card-img-top" alt="Portfolio">
+                        <img src="images/6_card.png" class="card-img-top" alt="Custom-Navbar">
                         <div class="card-body">
-                          <a href="portfolio/index.html" class="btn">Portfolio</a>
+                          <a href="5-custom-navbar/index.html" class="btn">Navbar</a>
                         </div>
                       </div>
                     </div>
